# ml

./: README.md
cpm-svm/: CMakeLists.txt
cpm-svm/cpm-svm/: CMakeLists.txt  base.cpp  cpm-svm.pro  data.cpp  data.h  linear_algebra.h  main.cpp  solve_qp.cpp  solve_qp.h  svm.cpp  svm.h  timer.h
cpm-svm/data/: very_simple_test.txt
cpm-svm/doc/: description.docx
cpm-svm/examples/: CMakeLists.txt  main.cpp
cpm-svm/experiments/: cpm_svm.py  exp.py
cpm-svm/python/: CMakeLists.txt  Makefile  check.py  cpm_svm.py  cython_svm.pyx  exp.py  setup.py  spammodule.c  spammodule.cpp  src  svm.pxd  svmmodule.cpp  test.py  test2.py  test_with_3_classes.py
cpm-svm/svm/: CMakeLists.txt  base.cpp  base.h  base_matrix.cpp  base_matrix.h  data.cpp  data.h  dense_data.cpp  dense_data.h  dense_matrix.cpp  dense_matrix.h  linear_algebra.h  solve_qp.h  sparse_data.cpp  sparse_data.h  sparse_matrix.cpp  sparse_matrix.h  svm.cpp  svm.h  timer.h
cpm-svm/test/: CMakeLists.txt  main.cpp  test.cpp  test.h  test.pro
